Gutter rendering all bills on mobile formatting correctly.

--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -358,3 +358,9 @@ select option {
   justify-content: space-around;
   align-items: center;
 }
+
+@media only screen and (max-width: 1500px) {
+  .gutter {
+    width: 100%;
+  }
+}
